Issue with overflow cutting off link focus

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -90,6 +90,7 @@ a#skipnav {
 
 .article-style {
     line-height: 2;
+    overflow: visible;
 }
 
 .article-metadata {
